fix padding on mobile

--- a/src/scss/_cp-landing.scss
+++ b/src/scss/_cp-landing.scss
@@ -286,6 +286,10 @@
   .wrapper, .landing-footer {
     padding-left: 170px !important;
     padding-right: 170px !important;
+
+    @media screen and (max-width: 1024px) {
+      padding: 0 !important;
+    }
   }
   .landing-body {
     border-right: none;
